--- a/ChurchDB_HTML.html
+++ b/ChurchDB_HTML.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spartan"> <!-- Access to Google Fonts API -->
 <div style="overflow-x:auto;">
   <table id="myTable">
     <tr class="header">
