--- a/ChurchDB_HTML.html
+++ b/ChurchDB_HTML.html
@@ -3,24 +3,32 @@
   <tr class="header">
     <th style="width:25%;" onclick="sortTable(0)">Name*</th>
     <th style="width:25%;" onclick="sortTable(1)">Sunday Worship Time</th>
-    <th style="width:25%;" onclick="sortTable(2)">Distance</th>
+    <th style="width:25%;" onclick="sortTable(2)">Distance (miles)</th>
     <th style="width:25%;" onclick="sortTable(3)">Contact Info</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Germany</td>
+    <td>Acts Fellowship Church</td>
+    <td>10:05 AM</td>
+    <td>3.6</td>
+    <td>Some Link</td>
   </tr>
   <tr>
-    <td>Berglunds snabbkop</td>
-    <td>Sweden</td>
+    <td>AKPC</td>
+    <td>09:45 AM</td>
+    <td>10</td>
+    <td>Some Link</td>
   </tr>
   <tr>
-    <td>Island Trading</td>
-    <td>UK</td>
+    <td>Austin Stone 1</td>
+    <td>8:00 AM</td>
+    <td>5.2</td>
+    <td>Some Link</td>
   </tr>
   <tr>
-    <td>Koniglich Essen</td>
-    <td>Germany</td>
+    <td>Austin Stone 2</td>
+    <td>5:00 PM</td>
+    <td>6</td>
+    <td>Some Link</td>
   </tr>
 </table>
 </div>
