--- a/ChurchDB_HTML.html
+++ b/ChurchDB_HTML.html
@@ -1,21 +1,21 @@
 <div style="overflow-x:auto;">
 <table id="myTable">
   <tr class="header">
-    <th style="width:25%;" onclick="sortTable(0)">Name*</th>
+    <th style="width:25%;" onclick="sortTable(0)">Name</th>
     <th style="width:25%;" onclick="sortTable(1)">Sunday Worship Time</th>
     <th style="width:25%;" onclick="sortTable(2)">Distance (miles)</th>
     <th style="width:25%;" onclick="sortTable(3)">Contact Info</th>
   </tr>
   <tr>
-    <td>Acts Fellowship Church</td>
+    <td>Acts Fellowship Church*</td>
     <td>10:05 AM</td>
     <td>3.6</td>
     <td>Some Link</td>
   </tr>
   <tr>
-    <td>AKPC</td>
+    <td>AKPC*</td>
     <td>09:45 AM</td>
-    <td>10</td>
+    <td>10.0</td>
     <td>Some Link</td>
   </tr>
   <tr>
@@ -27,7 +27,7 @@
   <tr>
     <td>Austin Stone 2</td>
     <td>5:00 PM</td>
-    <td>6</td>
+    <td>6.0</td>
     <td>Some Link</td>
   </tr>
 </table>
