--- a/ChurchDB_HTML.html
+++ b/ChurchDB_HTML.html
@@ -1,4 +1,5 @@
 <div style="overflow-x:auto;">
+ *: College Ministry Available (Check to filter) <input type="checkbox" id="myCheck" onclick="myFunction()">
 <table id="myTable">
   <tr class="header">
     <th style="width:25%;" onclick="sortTable(0)">Name</th>
