Added link to access Google Fonts API

--- a/ChurchDB_HTML.html
+++ b/ChurchDB_HTML.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spartan">  <!-- Access to Google Fonts API -->
 <div style="overflow-x:auto;">
  *: College Ministry Available (Check to filter) <input type="checkbox" id="myCheck" onclick="myFunction()">
 <table id="myTable">
