--- a/ChurchDB_HTML.html
+++ b/ChurchDB_HTML.html
@@ -8,29 +8,125 @@
     <th style="width:25%;" onclick="sortTable(2)">Distance (miles)</th>
     <th style="width:25%;" onclick="sortTable(3)">Contact Info</th>
   </tr>
+  
+  <tr>
+    <td>Central Christian Church</td>
+    <td>00:00 AM</td>
+    <td>0.9</td>
+    <td>Jesus</td>
+  </tr>
+  
+  <tr>
+    <td>City Life Church</td>
+    <td>00:00 AM</td>
+    <td>1.6</td>
+    <td>Jesus</td>
+  </tr>
+  
+  <tr>
+    <td>University Christian Church</td>
+    <td>00:00 AM</td>
+    <td>0.4</td>
+    <td>Jesus</td>
+  </tr>
+  
+  <tr>
+    <td>Central Presbyterian Church</td>
+    <td>00:00 AM</td>
+    <td>1</td>
+    <td>Jesus</td>
+  </tr>  
+  
+  <tr>
+    <td>All Saints' Episcopal Church</td>
+    <td>00:00 AM</td>
+    <td>0.4</td>
+    <td>Jesus</td>
+  </tr>  
+  
+  <tr>
+    <td>First United Methodist Church of Austin</td>
+    <td>00:00 AM</td>
+    <td>0.9</td>
+    <td>Jesus</td>
+  </tr>  
+  
+  <tr>
+    <td>The Austin Stone</td>
+    <td>00:00 AM</td>
+    <td>2.8</td>
+    <td>Jesus</td>
+  </tr>  
+  
+  <tr>
+    <td>Church At East</td>
+    <td>00:00 AM</td>
+    <td>1.3</td>
+    <td>Jesus</td>
+  </tr>  
+  
+  <tr>
+    <td>Gracepoint Austin Church</td>
+    <td>00:00 AM</td>
+    <td>0.2</td>
+    <td>Jesus</td>
+  </tr>  
+  
+   <tr>
+    <td>St. David's Episcopal Church</td>
+    <td>00:00 AM</td>
+    <td>0.9</td>
+    <td>Jesus</td>
+  </tr>  
+  
+  <tr>
+    <td>Tarrytown United Methodist Church</td>
+    <td>00:00 AM</td>
+    <td>2.1/td>
+    <td>Jesus</td>
+  </tr>  
+  
+  <tr>
+    <td>Christ Church</td>
+    <td>00:00 AM</td>
+    <td>1.5</td>
+    <td>Jesus</td>
+  </tr>  
+  
+  <tr>
+    <td>First Baptist Church of Austin</td>
+    <td>00:00 AM</td>
+    <td>0.8</td>
+    <td>Jesus</td>
+  </tr>  
+  
   <tr>
     <td>Acts Fellowship Church*</td>
     <td>10:05 AM</td>
     <td>3.6</td>
-    <td>Some Link</td>
+    <td>Jesus</td>
   </tr>
+  
   <tr>
     <td>AKPC*</td>
     <td>09:45 AM</td>
     <td>10.0</td>
-    <td>Some Link</td>
+    <td>Jesus</td>
   </tr>
+  
   <tr>
     <td>Austin Stone 1</td>
-    <td>8:00 AM</td>
+    <td>08:00 AM</td>
     <td>5.2</td>
-    <td>Some Link</td>
+    <td>Jesus</td>
   </tr>
+  
   <tr>
     <td>Austin Stone 2</td>
-    <td>5:00 PM</td>
+    <td>05:00 PM</td>
     <td>6.0</td>
-    <td>Some Link</td>
+    <td>Jesus</td>
   </tr>
+  
 </table>
 </div>
