--- a/ChurchDB_HTML.html
+++ b/ChurchDB_HTML.html
@@ -3,10 +3,12 @@
  *: College Ministry Available (Check to filter) <input type="checkbox" id="myCheck" onclick="myFunction()">
 <table id="myTable">
   <tr class="header">
-    <th style="width:25%;" onclick="sortTable(0)">Name</th>
-    <th style="width:25%;" onclick="sortTable(1)">Sunday Worship Time</th>
-    <th style="width:25%;" onclick="sortTable(2)">Distance (miles)</th>
-    <th style="width:25%;" onclick="sortTable(3)">Contact Info</th>
+    <th style="width:16%;" onclick="sortTable(0)">Name</th>
+    <th style="width:16%;" onclick="sortTable(1)">Sunday Worship Time</th>
+    <th style="width:16%;" onclick="sortTable(2)">Address</th>
+    <th style="width:16%;" onclick="sortTable(3)">Distance (miles)</th>
+    <th style="width:16%;" onclick="sortTable(4)">Denomination</th>
+    <th style="width:16%;" onclick="sortTable(5)">Contact Info</th>
   </tr>
   
   <tr>
